<resources>
    <string name="app_name">ShopKeepers</string>
    <string name="btn_txt1">Sign Up</string>
    <string name="btn_txt2">Log In</string>
    <string name="btn_txt3">Enter User Name</string>
    <string name="btn_txt4">Password</string>
    <string name="btn_txt5">Forget password click</string>
    <string name="btn_txt6">Sign Up Here</string>
    <string name="btn_txt7">Cancel</string>
    <string name="btn_txt8">Done</string>
    <string name="btn_txt9">Name</string>
    <string name="btn_txt10">User Name</string>
    <string name="btn_txt11">Password</string>
    <string name="btn_txt12">Confirm Password</string>
    <string name="btn_txt13">What is your pet name? </string>
    <string name="btn_txt14">What do you like most?</string>
    <string name="btn_txt15">What is your favourite hobby?</string>
    <string name="btn_txt16">Add Customer</string>
    <string name="btn_txt17">Submit</string>
    <string name="btn_txt18">Submit</string>
    <string name="btn_txt19">Submit</string>
    <string name="btn_txt20">Submit</string>
    <string name="btn_txt21">Submit</string>
    <string name="btn_txt22">Submit</string>
    <string name="btn_txt23">Submit</string>
    <string name="btn_txt24">Submit</string>
    <string name="btn_txt25">Submit</string>
    <string name="btn_txt26">Submit</string>

</resources>